--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
 	"flask>=3.0",
+	"python-dotenv>=1.2.1",
 	"requests>=2.31",
 ]
 
