--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
 	"flask>=3.0",
+	"matplotlib>=3.10.7",
+	"pandas>=2.3.3",
 	"python-dotenv>=1.2.1",
 	"requests>=2.31",
-	"uvicorn>=0.38.0",
+	"scikit-learn>=1.7.2",
 ]
 
 [project.optional-dependencies]
@@ -21,4 +23,4 @@ requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["app*", "AI_model*"]
+include = ["app*"]
